<resources>
    <string name="app_name">K23411TEApp</string>
    <string name="str_university">University of Economics and Law</string>
    <string name="str_your_major">Show your major</string>
    <string name="str_my_major">Data Science</string>
    <string name="str_login">Đăng nhập hệ thống</string>
    <string name="str_username">User Name:</string>
    <string name="str_hint_username">Enter your name here!</string>
    <string name="str_password">"Password: "</string>
    <string name="str_hint_password">Enter your password here</string>
    <string name="str_button_login">Login</string>
    <string name="str_button_exit">Exit</string>
    <string name="str_login_sucessful">LOGIN SUCESSFULLY!!</string>
    <string name="str_login_fail">LOGIN FAILED!!</string>
    <string name="str_result" />
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
</resources>